--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,12 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
 
     <!-- Vendor: Angular, followed by our custom Javascripts -->
     <script src="js/angular.min.js"></script>
     <script src="js/angular-route.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- <script src="js/ui-bootstrap-1.2.4.min.js"></script> -->
     <script src="js/app.js"></script>
   </body>
 </html>
