datepicker, dynamic form input adding

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-datepicker.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
@@ -37,6 +38,8 @@
     <script src="js/angular.min.js"></script>
     <script src="js/angular-route.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="locales/bootstrap-datepicker.cs.min.js"></script>
     <!-- <script src="js/ui-bootstrap-1.2.4.min.js"></script> -->
     <script src="js/app.js"></script>
   </body>
