--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
     <div ng-include='"templates/header.html"'></div>
 
-    <div ng-view></div>
+    <div ng-view data-dismiss="collapse" data-target=".navbar-collapse"></div>
 
     <div ng-include='"templates/footer.html"'></div>
 
