--- a/src/index.html
+++ b/src/index.html
@@ -1,49 +1,57 @@
 <!DOCTYPE html>
 <html lang="cs" ng-app="ufss">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Skórování Ultimate Frisbee</title>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+		<title>Skórování Ultimate Frisbee</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.css" rel="stylesheet">
-    <link href="css/bootstrap-datepicker.css" rel="stylesheet">
+		<!-- Bootstrap -->
+		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap-theme.css" rel="stylesheet">
+		<link href="css/bootstrap-datepicker.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/navbar-fixed-top.css" rel="stylesheet">
+		<!-- Custom styles for this template -->
+		<link href="css/navbar-fixed-top.css" rel="stylesheet">
 
-    <!-- Advanced styles -->
-    <link href="css/app.css" rel="stylesheet">
+		<!-- Advanced styles -->
+		<link href="css/app.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body ng-controller="PageCtrl">
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
+	</head>
+	<body ng-controller="PageCtrl">
 
-    <div ng-include='"templates/header.html"'></div>
+		<div ng-include='"templates/header.html"'></div>
+		
+		<div class="container">
+			<flash:messages></flash:messages>
+		</div>
 
-    <div ng-view data-dismiss="collapse" data-target=".navbar-collapse"></div>
+		<div ng-view data-dismiss="collapse" data-target=".navbar-collapse"></div>
 
-    <div ng-include='"templates/footer.html"'></div>
+		<div ng-include='"templates/footer.html"'></div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="js/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
 
-    <!-- Vendor: Angular, followed by our custom Javascripts -->
-    <script src="js/angular.min.js"></script>
-    <script src="js/angular-route.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-datepicker.min.js"></script>
-    <script src="locales/bootstrap-datepicker.cs.min.js"></script>
-    <!-- <script src="js/ui-bootstrap-1.2.4.min.js"></script> -->
-    <script src="js/app.js"></script>
-  </body>
+		<!-- Vendor: Angular, followed by our custom Javascripts -->
+		<script src="js/angular.min.js"></script>
+		<script src="js/angular-sanitize.min.js"></script>
+		<script src="js/angular-route.min.js"></script>
+		<script src="js/angular-translate.min.js"></script>
+		<script src="js/angular-flash.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/bootstrap-datepicker.min.js"></script>
+		<script src="locales/bootstrap-datepicker.cs.min.js"></script>
+		<!-- <script src="js/ui-bootstrap-1.2.4.min.js"></script> -->
+		<script src="js/app.js"></script>
+		<script src="js/controllers.js"></script>
+	</body>
 </html>
