--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
 		<script src="js/angular-sanitize.min.js"></script>
 		<script src="js/angular-route.min.js"></script>
 		<script src="js/angular-translate.min.js"></script>
+		<script src="js/angular-messages.min.js"></script>
 		<script src="js/angular-flash.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/bootstrap-datepicker.min.js"></script>
