--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/bootstrap-theme.css" rel="stylesheet">
 		<link href="css/bootstrap-datepicker.css" rel="stylesheet">
+		<link href="css/jquery.timepicker.css" rel="stylesheet">
 
 		<!-- Custom styles for this template -->
 		<link href="css/navbar-fixed-top.css" rel="stylesheet">
@@ -33,7 +34,7 @@
 			<flash:messages></flash:messages>
 		</div>
 
-		<div ng-view data-dismiss="collapse" data-target=".navbar-collapse"></div>
+		<div ng-view></div>
 
 		<div ng-include='"templates/footer.html"'></div>
 
@@ -50,8 +51,9 @@
 		<script src="js/angular-flash.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/bootstrap-datepicker.min.js"></script>
+		<script src="js/jquery.timepicker.min.js"></script>
 		<script src="locales/bootstrap-datepicker.cs.min.js"></script>
-		<!-- <script src="js/ui-bootstrap-1.2.4.min.js"></script> -->
+		<!-- <script src="js/angular-strap.min.js"></script> -->
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
 	</body>
