--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
 		<script src="js/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
 
+		<!-- MD5 for gravatar -->
+		<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
+
 		<!-- Vendor: Angular, followed by our custom Javascripts -->
 		<script src="js/angular.min.js"></script>
 		<script src="js/angular-sanitize.min.js"></script>
