new tournament form works now

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
 		<script src="js/angular-messages.min.js"></script>
 		<script src="js/angular-flash.js"></script>
 		<script src="js/isteven-multi-select.js"></script>
+		<script src="js/checklist-model.js"></script>
 		<script src="js/jquery.timepicker.min.js"></script>
 		<!-- <script src="js/angular-strap.min.js"></script> -->
 		<script src="js/app.js"></script>
